styles iniciais header

--- a/index.html
+++ b/index.html
@@ -2,18 +2,25 @@
 <html lang="en">
 
 <head>
-    <!-- <?php require_once __DIR__ . '/includes/head.php' ?> -->
     <link rel="stylesheet" href="/dist/css/style.css">
 </head>
 
 
 <body>
-    <!-- <?php require_once __DIR__ . '/includes/header.php' ?> -->
+    <header class="header">
+        <div class="header-wrapper">
+            <div class="header__logo">
+                <img src="./src/imgs/logo.svg" alt="logo-main">
+            </div>
+            <input type="text" class="header__search" placeholder="Procure em nossa comunidade">
+            <div class="header-options">
+                options
+            </div>
+        </div>
+
+    </header>
 
     teste fonte
-
-
-
 
     <script src="/dist/js/main.js"></script>
 </body>
