--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
     <link rel="stylesheet" href="/dist/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@100;200;400;600;900&display=swap" rel="stylesheet">
 </head>
 
 
