--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
                 <img src="./src/imgs/logo.svg" alt="logo-main">
             </div>
             <input type="text" class="header__search" placeholder="Procure em nossa comunidade">
-            <div class="header-options">
-                options
-            </div>
+            <ul class="header-options">
+                <li class="header-options__item"><img src="/src/imgs/icon-help.png" alt="icon help"></li>
+                <li class="header-options__item"><img src="/src/imgs/icon-gear.png" alt="icon duvidas"></li>
+            </ul>
         </div>
+
 
     </header>
 
