iniciando grid content

--- a/index.html
+++ b/index.html
@@ -21,11 +21,28 @@
                 <li class="header-options__item"><img src="/src/imgs/icon-gear.png" alt="icon duvidas"></li>
             </ul>
         </div>
-
-
     </header>
 
-    teste fonte
+    <main class="content">
+        <div class="content__grid">
+            <nav class="content__navbar">
+                <ul>
+                    <li>
+                        item nav1
+                    </li>
+                    <li>
+                        item nav 2
+                    </li>
+                </ul>
+
+
+            </nav>
+            <p>teste2</p>
+        </div>
+
+    </main>
+
+
 
     <script src="/dist/js/main.js"></script>
 </body>
