iniciando painel de navegação

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
             <nav class="content__navbar">
                 <ul>
                     <li>
-                        item nav1
+                        <a href="">
+                            <img src="/src/imgs/icon-lined.png" alt=""> Painel
+                        </a>
                     </li>
                     <li>
                         item nav 2
