estrutura de navegação pronta

--- a/index.html
+++ b/index.html
@@ -26,20 +26,30 @@
     <main class="content">
         <div class="content__grid">
             <nav class="content__navbar">
-                <ul>
+                <ul class="nav-options">
                     <li>
                         <a href="">
-                            <img src="/src/imgs/icon-lined.png" alt=""> Painel
+                            <img src="/src/imgs/icon-lined.png" alt="icon painel"> Painel
                         </a>
                     </li>
                     <li>
-                        item nav 2
+                        <a href="">
+                            <img src="/src/imgs/icon-download.png" alt="icon painel"> Downloads
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="/src/imgs/icon-lined.png" alt="icon painel"> Painel
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="/src/imgs/icon-lined.png" alt="icon painel"> Painel
+                        </a>
                     </li>
                 </ul>
-
-
             </nav>
-            <p>teste2</p>
+
         </div>
 
     </main>
