--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/dist/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@100;200;400;600;900&display=swap" rel="stylesheet">
+
 </head>
 
 
@@ -14,6 +14,7 @@
         <div class="header-wrapper">
             <div class="header__logo">
                 <img src="./src/imgs/logo.svg" alt="logo-main">
+                <p> Box Community</p>
             </div>
             <input type="text" class="header__search" placeholder="Procure em nossa comunidade">
             <ul class="header-options">
@@ -48,8 +49,12 @@
                         </a>
                     </li>
                 </ul>
-            </nav>
 
+
+            </nav>
+            <div class="content-support">
+
+            </div>
         </div>
 
     </main>
