--- a/index.html
+++ b/index.html
@@ -12,14 +12,18 @@
 <body>
     <header class="header">
         <div class="header-wrapper">
-            <div class="header__logo">
+            <a href="" class="header__logo">
                 <img src="./src/imgs/logo.svg" alt="logo-main">
                 <p> Box Community</p>
-            </div>
+            </a>
             <input type="text" class="header__search" placeholder="Procure em nossa comunidade">
             <ul class="header-options">
-                <li class="header-options__item"><img src="/src/imgs/icon-help.png" alt="icon help"></li>
-                <li class="header-options__item"><img src="/src/imgs/icon-gear.png" alt="icon duvidas"></li>
+                <li class="header-options__item">
+                    <a href=""><img src="/src/imgs/icon-help.png" alt="icon help"></a>
+                </li>
+                <li class="header-options__item">
+                    <a href=""><img src="/src/imgs/icon-gear.png" alt="icon duvidas"></a>
+                </li>
             </ul>
         </div>
     </header>
