ativa tab conforme indice clicado

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 
 </head>
 
-
 <body>
     <header class="header">
         <div class="header-wrapper">
@@ -18,9 +17,9 @@
             </a>
             <input type="text" class="header__search" placeholder="Procure em nossa comunidade">
             <ul class="header-options">
-                <li class="header-options__item">
+                <!-- <li class="header-options__item">
                     <a href=""><img src="/src/imgs/icon-help.png" alt="icon help"></a>
-                </li>
+                </li> -->
                 <li class="header-options__item">
                     <a href=""><img src="/src/imgs/icon-gear.png" alt="icon duvidas"></a>
                 </li>
@@ -33,31 +32,37 @@
             <nav class="content__navbar">
                 <ul class="nav-options">
                     <li>
-                        <a href="">
-                            <img src="/src/imgs/icon-lined.png" alt="icon painel"> Painel
-                        </a>
+                        <img src="/src/imgs/icon-feed.png" alt="icon painel"> Home
+
                     </li>
                     <li>
-                        <a href="">
-                            <img src="/src/imgs/icon-download.png" alt="icon painel"> Downloads
-                        </a>
+
+                        <img src="/src/imgs/icon-download.png" alt="icon painel"> Downloads
+
                     </li>
+
                     <li>
-                        <a href="">
-                            <img src="/src/imgs/icon-lined.png" alt="icon painel"> Painel
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <img src="/src/imgs/icon-lined.png" alt="icon painel"> Painel
-                        </a>
+
+                        <img src="/src/imgs/icon-lined.png" alt="icon painel"> Painel
+
                     </li>
                 </ul>
 
 
             </nav>
             <div class="content-support">
+                <section>
+                    HOME
+                </section>
+                <section>
 
+
+                    Download
+                </section>
+
+                <section>
+                    Painel
+                </section>
             </div>
         </div>
 
