iniciando estilos modais

--- a/index.html
+++ b/index.html
@@ -70,6 +70,22 @@
 
 
 
+    <div class="modal">
+        <div class="modal__container">
+            <div class="modal__header">
+                header
+            </div>
+            <div class="modal__body">
+                <div class="modal__content">
+                    body
+                </div>
+            </div>
+            <div class="modal__footer">
+                footer
+            </div>
+        </div>
+    </div>
+
     <script src="/dist/js/main.js"></script>
 </body>
 
