header-style modal

--- a/index.html
+++ b/index.html
@@ -55,8 +55,6 @@
                     HOME
                 </section>
                 <section>
-
-
                     Download
                 </section>
 
@@ -68,12 +66,13 @@
 
     </main>
 
-
-
     <div class="modal">
         <div class="modal__container">
             <div class="modal__header">
-                header
+                <h4 class="modal__title">Configurações</h4>
+                <a href="">
+                    <img src="/src/imgs/icon-close.png" alt="fechar modal">
+                </a>
             </div>
             <div class="modal__body">
                 <div class="modal__content">
