add content modal modal config

--- a/index.html
+++ b/index.html
@@ -76,16 +76,27 @@
             </div>
             <div class="modal__body">
                 <div class="modal__content">
-                    body
+                    <ul class="modal__list-config">
+                        <li>
+                            <p>Idioma</p>
+                            <span>
+                                <label for="info-language">Altere o idioma:</label>
+                                <select name="" id="info-language">
+                                <option value="">portugues</option>
+                            </div>
+
+                            </select>
+                        </li>
+                    </ul>
+                    </div>
+                </div>
+                <div class="modal__footer">
+                    footer
                 </div>
             </div>
-            <div class="modal__footer">
-                footer
-            </div>
         </div>
-    </div>
 
-    <script src="/dist/js/main.js"></script>
+        <script src="/dist/js/main.js"></script>
 </body>
 
 
