--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <a href=""><img src="/src/imgs/icon-help.png" alt="icon help"></a>
                 </li> -->
                 <li class="header-options__item">
-                    <a href=""><img src="/src/imgs/icon-gear.png" alt="icon duvidas"></a>
+                    <a href="" class="btn-modal-config"><img src="/src/imgs/icon-gear.png" alt="icon duvidas"></a>
                 </li>
             </ul>
         </div>
@@ -70,7 +70,7 @@
         <div class="modal__container">
             <div class="modal__header">
                 <h4 class="modal__title">Configurações</h4>
-                <a href="">
+                <a class="close-modal" href="">
                     <img src="/src/imgs/icon-close.png" alt="fechar modal">
                 </a>
             </div>
@@ -90,9 +90,9 @@
                     </ul>
                     </div>
                 </div>
-                <div class="modal__footer">
+                <!-- <div class="modal__footer">
                     footer
-                </div>
+                </div> -->
             </div>
         </div>
 
