espaçamentos na HOME

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
                 <img src="./src/imgs/logo.svg" alt="logo-main">
                 <p> Box Community</p>
             </a>
-            <input type="text" class="header__search" placeholder="Procure em nossa comunidade">
+            <div class="header__search">
+                <input type="text" placeholder="Procure em nossa comunidade">
+            </div>
             <ul class="header-options">
                 <!-- <li class="header-options__item">
                     <a href=""><img src="/src/imgs/icon-help.png" alt="icon help"></a>
@@ -82,7 +84,7 @@
                             <span>
                                 <label for="info-language">Altere o idioma:</label>
                                 <select name="" id="info-language">
-                                <option value="">portugues</option>
+                              
                             </div>
 
                             </select>
