estilos grid download

--- a/index.html
+++ b/index.html
@@ -53,11 +53,37 @@
 
             </nav>
             <div class="content-support">
-                <section>
-                    HOME
-                </section>
-                <section>
-                    Download
+                <section>feed</section>
+
+                <section class="content-download">
+                    <div class="content-download__grid">
+                        <div class="content-download__item">
+                            item
+                        </div>
+                        <div class="content-download__item">
+                            item
+                        </div>
+                        <div class="content-download__item">
+                            item
+                        </div>
+                        <div class="content-download__item">
+                            item
+                        </div>
+                        <div class="content-download__item">
+                            item
+                        </div>
+                        <div class="content-download__item">
+                            item
+                        </div>
+                        <div class="content-download__item">
+                            item
+                        </div>
+                        <div class="content-download__item">
+                            item
+                        </div>
+
+
+                    </div>
                 </section>
 
                 <section>
