--- a/index.html
+++ b/index.html
@@ -38,51 +38,40 @@
 
                     </li>
                     <li>
-
                         <img src="/src/imgs/icon-download.png" alt="icon painel"> Downloads
-
                     </li>
 
                     <li>
-
                         <img src="/src/imgs/icon-lined.png" alt="icon painel"> Painel
-
                     </li>
                 </ul>
-
-
             </nav>
+
             <div class="content-support">
                 <section>feed</section>
-
                 <section class="content-download">
                     <div class="content-download__grid">
-                        <div class="content-download__item">
-                            item
+                        <div class="content-download-item">
+                            <p class="content-download-item__title">Download Title</p>
+                            <ul>
+                                <li>
+                                    <div class="content-download-item__desc">
+                                        <p>Imagem Lorem ipsum dolor sit, amet consectetur adipisicing elit. ImpeditImpedit</p>
+                                    </div>
+                                    <span>
+                                        <label>Type:</label>
+                                        <p>Imagem</p>
+                                    </span>
+                                    <span>
+                                        <label>Size:</label>
+                                        <p>32.4KB</p>
+                                    </span>
+                                    <span>
+                                      <a href="">Download</a>
+                                    </span>
+                                </li>
+                            </ul>
                         </div>
-                        <div class="content-download__item">
-                            item
-                        </div>
-                        <div class="content-download__item">
-                            item
-                        </div>
-                        <div class="content-download__item">
-                            item
-                        </div>
-                        <div class="content-download__item">
-                            item
-                        </div>
-                        <div class="content-download__item">
-                            item
-                        </div>
-                        <div class="content-download__item">
-                            item
-                        </div>
-                        <div class="content-download__item">
-                            item
-                        </div>
-
-
                     </div>
                 </section>
 
