--- a/index.html
+++ b/index.html
@@ -99,21 +99,18 @@
                             <span>
                                 <label for="info-language">Altere o idioma:</label>
                                 <select name="" id="info-language">
-                              
-                            </div>
-
-                            </select>
+                                    <option>2</option>
+                                </select>
+                            </span>
                         </li>
                     </ul>
-                    </div>
                 </div>
-                <!-- <div class="modal__footer">
-                    footer
-                </div> -->
             </div>
         </div>
+    </div>
 
-        <script src="/dist/js/main.js"></script>
+
+    <script src="/dist/js/main.js"></script>
 </body>
 
 
