add itens de downloads e criando title

--- a/index.html
+++ b/index.html
@@ -48,8 +48,11 @@
             </nav>
 
             <div class="content-support">
-                <section>feed</section>
+                <section>
+                    <h2 class="content-title">Feed</h2>
+                </section>
                 <section class="content-download">
+                    <h2 class="content-title">Downloads</h2>
                     <div class="content-download__grid">
                         <div class="content-download-item">
                             <p class="content-download-item__title">Download Title</p>
@@ -72,11 +75,99 @@
                                 </li>
                             </ul>
                         </div>
+                        <div class="content-download-item">
+                            <p class="content-download-item__title">Download Title</p>
+                            <ul>
+                                <li>
+                                    <div class="content-download-item__desc">
+                                        <p>Arquivo Lorem ipsum dolor sit, amet consectetur adipisicing elit. ImpeditImpedit</p>
+                                    </div>
+                                    <span>
+                                        <label>Type:</label>
+                                        <p>Config</p>
+                                    </span>
+                                    <span>
+                                        <label>Size:</label>
+                                        <p>255KB</p>
+                                    </span>
+                                    <span>
+                                      <a href="">Download</a>
+                                    </span>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div class="content-download-item">
+                            <p class="content-download-item__title">Download Title</p>
+                            <ul>
+                                <li>
+                                    <div class="content-download-item__desc">
+                                        <p>Document Lorem ipsum dolor sit, amet consectetur adipisicing elitt</p>
+                                    </div>
+                                    <span>
+                                        <label>Type:</label>
+                                        <p>Tabela</p>
+                                    </span>
+                                    <span>
+                                        <label>Size:</label>
+                                        <p>245KB</p>
+                                    </span>
+                                    <span>
+                                      <a href="">Download</a>
+                                    </span>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div class="content-download-item">
+                            <p class="content-download-item__title">Download Title</p>
+                            <ul>
+                                <li>
+                                    <div class="content-download-item__desc">
+                                        <p>Documet Lorem ipsum dolor tImpedit</p>
+                                    </div>
+                                    <span>
+                                        <label>Type:</label>
+                                        <p>PDF</p>
+                                    </span>
+                                    <span>
+                                        <label>Size:</label>
+                                        <p>88.4KB</p>
+                                    </span>
+                                    <span>
+                                      <a href="">Download</a>
+                                    </span>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div class="content-download-item">
+                            <p class="content-download-item__title">Download Title</p>
+                            <ul>
+                                <li>
+                                    <div class="content-download-item__desc">
+                                        <p>Imagem Lorem ipsum dolor sit, amet consectetur adipisicing elit. ImpeditImpedit</p>
+                                    </div>
+                                    <span>
+                                        <label>Type:</label>
+                                        <p>Imagem</p>
+                                    </span>
+                                    <span>
+                                        <label>Size:</label>
+                                        <p>12.4KB</p>
+                                    </span>
+                                    <span>
+                                      <a href="">Download</a>
+                                    </span>
+                                </li>
+                            </ul>
+                        </div>
+
                     </div>
                 </section>
 
                 <section>
-                    Painel
+                    <h2 class="content-title">Feed</h2>
                 </section>
             </div>
         </div>
