--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <link rel="stylesheet" href="/dist/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
 </head>
 
 <body>
@@ -167,7 +166,13 @@
                 </section>
 
                 <section>
-                    <h2 class="content-title">Feed</h2>
+                    <h2 class="content-title">Painel</h2>
+
+                    <div class="content-panel">
+                        <button>Fazer Upload</button>
+                        <button>Fazer Download</button>
+
+                    </div>
                 </section>
             </div>
         </div>
