btns de downloads

--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
                     <h2 class="content-title">Painel</h2>
 
                     <div class="content-panel">
-                        <button>Fazer Upload</button>
-                        <button>Fazer Download</button>
+                        <button class="btn-upload">Fazer Upload  <img src="./src/imgs/upload.svg" alt="upload"></button>
+                        <button class="btn-download">Fazer Download <img src="./src/imgs/upload.svg" alt="download"></button>
 
                     </div>
                 </section>
@@ -204,7 +204,6 @@
             </div>
         </div>
     </div>
-
 
     <script src="/dist/js/main.js"></script>
 </body>
