--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
     </main>
 
-    <div class="modal">
+    <div class="modal modal-config">
         <div class="modal__container">
             <div class="modal__header">
                 <h4 class="modal__title">Configurações</h4>
@@ -200,6 +200,25 @@
                             </span>
                         </li>
                     </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal modal-download">
+        <div class="modal__container">
+            <div class="modal__header">
+                <h4 class="modal__title">Download via link</h4>
+                <a class="close-modal" href="">
+                    <img src="/src/imgs/icon-close.png" alt="fechar modal">
+                </a>
+            </div>
+            <div class="modal__body">
+                <div class="modal__content">
+                    <form action="">
+                        <label for="link-download">link para download:</label>
+                        <input type="text" id="link-download">
+                    </form>
                 </div>
             </div>
         </div>
