--- a/index.html
+++ b/index.html
@@ -224,6 +224,27 @@
         </div>
     </div>
 
+
+    <div class="modal modal-upload">
+        <div class="modal__container">
+            <div class="modal__header">
+                <h4 class="modal__title">Fazer upload:</h4>
+                <a class="close-modal" href="">
+                    <img src="/src/imgs/icon-close.png" alt="fechar modal">
+                </a>
+            </div>
+            <div class="modal__body">
+                <div class="modal__content">
+                    <form action="">
+                        <label for="file-upload" class="file-upload">Clique e insira seu upload
+                            <input type="file" id="file-upload">
+                        </label>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="/dist/js/main.js"></script>
 </body>
 
