--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     <div class="modal modal-upload">
         <div class="modal__container">
             <div class="modal__header">
-                <h4 class="modal__title">Fazer upload:</h4>
+                <h4 class="modal__title">upload file:</h4>
                 <a class="close-modal" href="">
                     <img src="/src/imgs/icon-close.png" alt="fechar modal">
                 </a>
@@ -236,9 +236,10 @@
             <div class="modal__body">
                 <div class="modal__content">
                     <form action="">
-                        <label for="file-upload" class="file-upload">Clique e insira seu upload
+                        <label for="file-upload" class="file-upload">Clique e insira seu arquivo
                             <input type="file" id="file-upload">
                         </label>
+                        <span>Até o momento suportamos arquivos de até 50 Megas</span>
                     </form>
                 </div>
             </div>
