ajustando funcionamento da modal é necessárioclasses especificas pra cada uma

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <div class="modal__container">
             <div class="modal__header">
                 <h4 class="modal__title">Configurações</h4>
-                <a class="close-modal" href="">
+                <a class="close-modal-config" href="">
                     <img src="/src/imgs/icon-close.png" alt="fechar modal">
                 </a>
             </div>
@@ -209,7 +209,7 @@
         <div class="modal__container">
             <div class="modal__header">
                 <h4 class="modal__title">Download via link</h4>
-                <a class="close-modal" href="">
+                <a class="close-modal-download" href="">
                     <img src="/src/imgs/icon-close.png" alt="fechar modal">
                 </a>
             </div>
@@ -229,7 +229,7 @@
         <div class="modal__container">
             <div class="modal__header">
                 <h4 class="modal__title">upload file:</h4>
-                <a class="close-modal" href="">
+                <a class="close-modal-upload">
                     <img src="/src/imgs/icon-close.png" alt="fechar modal">
                 </a>
             </div>
