iniciando validador de arquivo

--- a/index.html
+++ b/index.html
@@ -247,6 +247,14 @@
     </div>
 
     <script src="/dist/js/main.js"></script>
+
+    <script>
+        function validaTamanhoArquivo(selectInput) {
+            selectInput = document.querySelector('#file-upload');
+            console.log(selectInput.files);
+        }
+        validaTamanhoArquivo();
+    </script>
 </body>
 
 
