--- a/index.html
+++ b/index.html
@@ -237,9 +237,9 @@
                 <div class="modal__content">
                     <form action="">
                         <label for="file-upload" class="file-upload">Clique e insira seu arquivo
-                            <input type="file" id="file-upload">
+                            <input type="file" id="file-upload" onchange="validaTamanhoArquivo()">
                         </label>
-                        <span>Até o momento suportamos arquivos de até 50 Megas</span>
+                        <span class="response-file">Até o momento suportamos arquivos de até 2 MB.</span>
                     </form>
                 </div>
             </div>
@@ -250,8 +250,16 @@
 
     <script>
         function validaTamanhoArquivo(selectInput) {
+            var menssageFile = document.querySelector('.response-file');
             selectInput = document.querySelector('#file-upload');
-            console.log(selectInput.files);
+
+            if (selectInput.files[0].size > (1024 * 1024 * 2)) {
+                menssageFile.innerHTML = "Arquivo excedeu tamanho permitido, suportamos até 2 MB.";
+                menssageFile.style.color = "#FF1E0F";
+            } else {
+                menssageFile.innerHTML = "Arquivo adicionado com sucesso!"
+                menssageFile.style.color = "#F7E752";
+            }
         }
         validaTamanhoArquivo();
     </script>
