refactor inicial na função file p/ module class

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 <div class="modal__content">
                     <form action="">
                         <label for="file-upload" class="file-upload">Clique e insira seu arquivo
-                            <input type="file" id="file-upload" onchange="validaTamanhoArquivo()">
+                            <input type="file" id="file-upload">
                         </label>
                         <span class="response-file">Até o momento suportamos arquivos de até 2 MB.</span>
                     </form>
@@ -247,22 +247,6 @@
     </div>
 
     <script src="/dist/js/main.js"></script>
-
-    <script>
-        function validaTamanhoArquivo(selectInput) {
-            var menssageFile = document.querySelector('.response-file');
-            selectInput = document.querySelector('#file-upload');
-
-            if (selectInput.files[0].size > (1024 * 1024 * 2)) {
-                menssageFile.innerHTML = "Arquivo excedeu tamanho permitido, suportamos até 2 MB.";
-                menssageFile.style.color = "#FF1E0F";
-            } else {
-                menssageFile.innerHTML = "Arquivo adicionado com sucesso!"
-                menssageFile.style.color = "#F7E752";
-            }
-        }
-        validaTamanhoArquivo();
-    </script>
 </body>
 
 
