--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     <div class="modal modal-upload">
         <div class="modal__container">
             <div class="modal__header">
-                <h4 class="modal__title">upload file:</h4>
+                <h4 class="modal__title">Upload file:</h4>
                 <a class="close-modal-upload">
                     <img src="/src/imgs/icon-close.png" alt="fechar modal">
                 </a>
@@ -232,6 +232,8 @@
             <div class="modal__body">
                 <div class="modal__content">
                     <form action="">
+                        <input type="text" id="title-upload" placeholder="Titulo upload">
+                        <textarea placeholder="Insira descrição" rows="4"></textarea>
                         <label for="file-upload" class="file-upload">Clique e insira seu arquivo
                             <input type="file" id="file-upload">
                         </label>
