--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 <div class="modal__content">
                     <form action="">
                         <label for="link-download">link para download:</label>
-                        <input type="text" id="link-download">
+                        <input type="url" id="link-download" placeholder="https://example.com/link">
                     </form>
                 </div>
             </div>
